# whisperx-transcription

./: .env.example  .env.sample  .gitignore  README.md  benchmark.py  com.whisperx.daemon.plist  daemon_state.py  main.py  pyproject.toml  quick_language_test.py  test_language_detection.py  transcribe.py  watcher.py
WhisperBar/: .gitignore  Package.swift
WhisperBar/Scripts/: build.sh  package_app.sh
WhisperBar/Sources/WhisperBar/: DaemonConnection.swift  DaemonController.swift  DropHandler.swift  HistoryStore.swift  IconView.swift  LogViewer.swift  MenuContent.swift  Models.swift  NotificationManager.swift  SettingsStore.swift  TranscriptRow.swift  TranscriptionStore.swift  WhisperBarApp.swift
WhisperBar/Tests/: WhisperBarTests.swift
