[project]
name = "whisperx-transcription"
version = "0.1.0"
description = "Automated transcription system using WhisperX with language detection and speaker diarization"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "WhisperX Transcription System" }
]
keywords = ["whisperx", "transcription", "speech-to-text", "diarization", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "whisperx>=3.1.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "ffmpeg-python>=0.2.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
]

[tool.uv]
dev-dependencies = []
package = false